--- a/src/css/inputBox.css
+++ b/src/css/inputBox.css
@@ -7,9 +7,16 @@
 .inputBox_wrapper .inputBox:focus {
   outline-style: solid;
   outline-color: #3275ef;
-  box-shadow: 0 0 0.05rem #3275ef;
-  border: solid 0.01rem transparent;
+  box-shadow: 0 0 0.5rem #3275ef;
+  border: solid 0.5rem transparent;
   color: black;
+}
+.inputBox_wrapper .inputBox:focus::placeholder {
+  color: transparent;
+  opacity: 0;
+}
+.inputBox_wrapper .inputBox::placeholder {
+  padding-left: var(--placeholder-padding);
 }
 
 /*# sourceMappingURL=inputBox.css.map */
