--- a/src/css/login.css
+++ b/src/css/login.css
@@ -30,6 +30,9 @@
   margin-right: 6rem;
   margin-bottom: 2rem;
 }
+.login_wrapper .login_with_thirdParty .logo_and_company span {
+  white-space: nowrap;
+}
 .login_wrapper .login_with_thirdParty .signin_container {
   display: flex;
   flex-direction: column;
@@ -44,19 +47,69 @@
 .login_wrapper .login_with_account {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   flex: 5;
   height: 25rem;
-  padding: 0 0.5rem;
+  padding: 0 1.5rem;
   box-sizing: border-box;
+}
+.login_wrapper .login_with_account .login_title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-top: 2.5rem;
+  margin-bottom: 0.5rem;
+}
+.login_wrapper .login_with_account .sign_up_container {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.5rem;
+  margin-bottom: 2rem;
+  font-size: 0.5rem;
+}
+.login_wrapper .login_with_account .sign_up_container span {
+  color: gray;
+}
+.login_wrapper .login_with_account .sign_up_container button {
+  background-color: transparent;
+  border: none;
+  color: #0066ff;
+  font-size: 0.5rem;
+  cursor: pointer;
 }
 .login_wrapper .login_with_account .inputBox_container {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  gap: 1rem;
+}
+.login_wrapper .login_with_account .inputBox_container .email_login::placeholder {
+  padding-left: 1rem;
+  font-weight: 600;
+}
+.login_wrapper .login_with_account .inputBox_container .password::placeholder {
+  padding-left: 1rem;
+  font-weight: 600;
+}
+.login_wrapper .login_with_account .login_options {
+  display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  width: 100%;
+  margin: 1.5rem 0;
+  gap: 6rem;
+}
+.login_wrapper .login_with_account .login_options .remember_me_checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.2rem;
+}
+.login_wrapper .login_with_account .login_options .forgot_password_button {
+  background-color: transparent;
+  border: none;
+  color: #0066ff;
+  font-size: 1rem;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=login.css.map */
