--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -26,6 +26,10 @@
       font-weight: bold;
       margin-right: 6rem;
       margin-bottom: 2rem;
+
+      span{
+        white-space: nowrap;
+      }
     }
 
     .signin_container{
@@ -40,14 +44,82 @@
   }
 
   .login_with_account{
-    @include flex_center_column;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex:5;
     height: 25rem;
-    padding: 0 0.5rem;
+    padding: 0 1.5rem;
     box-sizing: border-box;
-    .inputBox_container{
-      @include flex_center_column;
-      gap: 1rem;
+
+    .login_title{
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-top: 2.5rem;
+      margin-bottom: 0.5rem;
     }
+    .sign_up_container{
+      display: flex;
+      justify-content: space-between;
+      gap: 0.5rem;
+      margin-bottom: 2rem;
+      font-size: 0.5rem;
+
+      span{
+        color:gray;
+      }
+
+      button{
+        background-color: transparent;
+        border: none;
+        color: #0066ff;
+        font-size: 0.5rem;
+        cursor: pointer;
+      }
+    }
+
+    .inputBox_container{
+      display: flex;
+      flex-direction: column;
+      width:100%;
+      gap: 1rem;
+
+      .email_login{
+        &::placeholder{
+          padding-left: 1rem;
+          font-weight:600;
+        }
+      }
+
+      .password{
+        &::placeholder{
+          padding-left: 1rem;
+          font-weight:600;
+        }
+      }
+    }
+
+    .login_options{
+      display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;;
+        margin: 1.5rem 0;
+        gap:6rem;
+      .remember_me_checkbox{
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        gap: 0.2rem;
+      }
+      .forgot_password_button{
+        background-color: transparent;
+        border: none;
+        color: #0066ff;
+        font-size: 1rem;
+        cursor: pointer;
+      }
+    }
+
   }
 }
