--- a/src/css/login.css
+++ b/src/css/login.css
@@ -97,6 +97,7 @@
   width: 100%;
   margin: 1.5rem 0;
   gap: 6rem;
+  white-space: nowrap;
 }
 .login_wrapper .login_with_account .login_options .remember_me_checkbox {
   display: flex;
@@ -110,6 +111,21 @@
   color: #0066ff;
   font-size: 1rem;
   cursor: pointer;
+}
+@media (max-width: 800px) {
+  .login_wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .login_wrapper .login_with_thirdParty {
+    padding: 0 4.5rem;
+  }
+  .login_wrapper .login_with_account {
+    margin-bottom: 2rem;
+  }
 }
 
 /*# sourceMappingURL=login.css.map */
