--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -106,6 +106,7 @@
         width: 100%;;
         margin: 1.5rem 0;
         gap:6rem;
+        white-space: nowrap;
       .remember_me_checkbox{
         display:flex;
         justify-content: center;
@@ -120,6 +121,20 @@
         cursor: pointer;
       }
     }
+  }
+  @media (max-width:800px){
+    width: 100%;
+    height: 100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
 
+    .login_with_thirdParty{
+     padding:0 4.5rem;
+    }
+    .login_with_account{
+      margin-bottom: 2rem;
+    }
   }
 }
+
