add favicon and constants file

--- a/src/css/inputBox.css
+++ b/src/css/inputBox.css
@@ -2,13 +2,14 @@
   color: rgba(222, 215, 215, 0.95);
   font-family: "Arial", sans-serif;
   font-size: 1rem;
-  border: solid, 0.01rem, rgba(222, 215, 215, 0.95);
+  border: solid 0.01rem rgba(222, 215, 215, 0.95);
 }
 .inputBox_wrapper .inputBox:focus {
   outline-style: solid;
   outline-color: #3275ef;
   box-shadow: 0 0 0.5rem #3275ef;
   border: solid 0.5rem transparent;
+  border-radius: 10rem;
   color: black;
 }
 .inputBox_wrapper .inputBox:focus::placeholder {
