--- a/src/css/inputBox.css
+++ b/src/css/inputBox.css
@@ -1,10 +1,10 @@
-.inputBox_wrapper .inputBox {
+.inputBox {
   color: rgba(222, 215, 215, 0.95);
   font-family: "Arial", sans-serif;
   font-size: 1rem;
   border: solid 0.01rem rgba(222, 215, 215, 0.95);
 }
-.inputBox_wrapper .inputBox:focus {
+.inputBox:focus {
   outline-style: solid;
   outline-color: #3275ef;
   box-shadow: 0 0 0.5rem #3275ef;
@@ -12,11 +12,11 @@
   border-radius: 10rem;
   color: black;
 }
-.inputBox_wrapper .inputBox:focus::placeholder {
+.inputBox:focus::placeholder {
   color: transparent;
   opacity: 0;
 }
-.inputBox_wrapper .inputBox::placeholder {
+.inputBox::placeholder {
   padding-left: var(--placeholder-padding);
 }
 
