--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -90,11 +90,25 @@
           font-weight:600;
         }
       }
+      .password_field{
+        width: 100%;
+        position: relative;
+        display: flex;
+        align-items: center;
 
-      .password{
-        &::placeholder{
-          padding-left: 1rem;
-          font-weight:600;
+        .password{
+          &::placeholder{
+            padding-left: 1rem;
+            font-weight:600;
+          }
+        }
+        .password_display_button{
+          position:absolute;
+          border: none;
+          background: transparent;
+          right: 0;
+          top: 50%;
+          transform: translateY(-50%);
         }
       }
     }
