--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,4 +1,5 @@
 .login_wrapper {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,6 +33,7 @@
 }
 .login_wrapper .login_with_thirdParty .logo_and_company span {
   white-space: nowrap;
+  font-size: 1.2rem;
 }
 .login_wrapper .login_with_thirdParty .signin_container {
   display: flex;
@@ -125,6 +127,11 @@
   color: #0066ff;
   font-size: 1rem;
   cursor: pointer;
+}
+.login_wrapper .login_with_account .login-dog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media (max-width: 800px) {
   .login_wrapper {
