--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -1,75 +1,78 @@
 @import 'mixin';
 @import 'variables';
 
-.login_wrapper{
+.login_wrapper {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 25rem;
   width: 50rem;
   background: $primary-color;
-  border: solid 1px gray ;
+  border: solid 1px gray;
 
-  .login_with_thirdParty{
+  .login_with_thirdParty {
     @include flex_center_column;
-    flex:3;
+    flex: 3;
     height: 25rem;
     font-size: 0.8rem;
     padding: 0 1rem;
     box-sizing: border-box;
-    color:$primary-color;
+    color: $primary-color;
     background-color: #13102c;
 
-    .logo_and_company{
-     @include flex_center_row;
-      gap:0.5rem;
+    .logo_and_company {
+      @include flex_center_row;
+      gap: 0.5rem;
       font-weight: bold;
       margin-right: 6rem;
       margin-bottom: 2rem;
 
-      span{
+      span {
         white-space: nowrap;
+        font-size: 1.2rem;
       }
     }
 
-    .signin_container{
+    .signin_container {
       @include flex_center_column;
       width: 100%;
       gap: 1rem;
     }
 
-    .login_sentence{
+    .login_sentence {
       margin-top: 1rem;
     }
   }
 
-  .login_with_account{
+  .login_with_account {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex:5;
+    flex: 5;
     height: 25rem;
     padding: 0 1.5rem;
     box-sizing: border-box;
 
-    .login_title{
+    .login_title {
       font-size: 1.5rem;
       font-weight: bold;
       margin-top: 2.5rem;
       margin-bottom: 0.5rem;
     }
-    .sign_up_container{
+
+    .sign_up_container {
       display: flex;
       justify-content: space-between;
       gap: 0.5rem;
       margin-bottom: 2rem;
       font-size: 0.5rem;
 
-      span{
-        color:gray;
+      span {
+        color: gray;
       }
 
-      button{
+      button {
         background-color: transparent;
         border: none;
         color: #0066ff;
@@ -78,32 +81,34 @@
       }
     }
 
-    .inputBox_container{
+    .inputBox_container {
       display: flex;
       flex-direction: column;
-      width:100%;
+      width: 100%;
       gap: 1rem;
 
-      .email_login{
-        &::placeholder{
+      .email_login {
+        &::placeholder {
           padding-left: 1rem;
-          font-weight:600;
+          font-weight: 600;
         }
       }
-      .password_field{
+
+      .password_field {
         width: 100%;
         position: relative;
         display: flex;
         align-items: center;
 
-        .password{
-          &::placeholder{
+        .password {
+          &::placeholder {
             padding-left: 1rem;
-            font-weight:600;
+            font-weight: 600;
           }
         }
-        .password_display_button{
-          position:absolute;
+
+        .password_display_button {
+          position: absolute;
           border: none;
           background: transparent;
           right: 0;
@@ -113,21 +118,23 @@
       }
     }
 
-    .login_options{
+    .login_options {
       display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;;
-        margin: 1.5rem 0;
-        gap:6rem;
-        white-space: nowrap;
-      .remember_me_checkbox{
-        display:flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      margin: 1.5rem 0;
+      gap: 6rem;
+      white-space: nowrap;
+
+      .remember_me_checkbox {
+        display: flex;
         justify-content: center;
         align-items: center;
         gap: 0.2rem;
       }
-      .forgot_password_button{
+
+      .forgot_password_button {
         background-color: transparent;
         border: none;
         color: #0066ff;
@@ -135,20 +142,26 @@
         cursor: pointer;
       }
     }
+
+    .login-dog {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
-  @media (max-width:800px){
+
+  @media (max-width: 800px) {
     width: 100%;
     height: 100%;
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
 
-    .login_with_thirdParty{
-     padding:0 4.5rem;
+    .login_with_thirdParty {
+      padding: 0 4.5rem;
     }
-    .login_with_account{
+    .login_with_account {
       margin-bottom: 2rem;
     }
   }
 }
-
