--- a/src/css/register.scss
+++ b/src/css/register.scss
@@ -1,7 +1,15 @@
 @import 'mixin';
 @import 'variables';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:wght@400;500;700&family=Young+Serif&display=swap');
 
-.login_wrapper {
+
+
+
+
+
+
+
+.register_wrapper {
   position: relative;
   display: flex;
   justify-content: center;
@@ -11,26 +19,30 @@
   background: $primary-color;
   border: solid 1px gray;
 
-  .login_with_thirdParty {
+  .register_content {
     @include flex_center_column;
-    flex: 3;
+    flex: 7;
     height: 25rem;
     font-size: 0.8rem;
-    padding: 0 1rem;
+    padding: 0 0.1rem;
     box-sizing: border-box;
     color: $primary-color;
     background-color: #13102c;
 
-    .logo_and_company {
-      @include flex_center_row;
+    .logo_and_slogan {
+      @include flex_center_column;
+      margin-bottom: 2rem;
       gap: 0.5rem;
       font-weight: bold;
-      margin-right: 6rem;
-      margin-bottom: 2rem;
 
       span {
         white-space: nowrap;
         font-size: 1.2rem;
+      }
+
+      .welcome_contents {
+        line-height: 1.5rem;
+        white-space: break-spaces;
       }
     }
 
@@ -41,25 +53,42 @@
     }
 
     .login_sentence {
-      margin-top: 1rem;
+      margin-top: 0.1rem;
     }
   }
 
-  .login_with_account {
+  .register_account {
     display: flex;
     flex-direction: column;
     align-items: center;
     flex: 5;
     height: 25rem;
-    padding: 0 1.5rem;
+    padding: 0 2rem;
+    margin-left: 0.9rem;
     box-sizing: border-box;
+    gap:1rem;
 
-    .login_title {
+    .register_title {
+      font-family: 'Young Serif', serif;
       font-size: 1.5rem;
       font-weight: bold;
-      margin-top: 2.5rem;
+      margin-top: 1rem;
       margin-bottom: 0.5rem;
     }
+
+    .subRegister_title {
+      font-family: 'Young Serif', serif;
+      font-size: 1rem;
+      font-weight: bold;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      background: linear-gradient(223deg, rgba(38,26,230,1) 0%, rgba(191,120,200,1) 22%, rgba(77,184,200,1) 50%, rgba(52,45,231,1) 73%, rgba(78,224,156,1) 100%);
+
+      color: transparent;
+      -webkit-background-clip: text;
+      background-clip: text;
+    }
+
 
     .sign_up_container {
       display: flex;
@@ -116,6 +145,13 @@
           transform: translateY(-50%);
         }
       }
+
+      .userName {
+        &::placeholder {
+          padding-left: 1rem;
+          font-weight: 600;
+        }
+      }
     }
 
     .login_options {
@@ -143,11 +179,12 @@
       }
     }
 
-    .login-animate {
+    .login_animate {
       display: flex;
       justify-content: center;
       align-items: center;
     }
+
   }
 
   @media (max-width: 800px) {
@@ -157,11 +194,12 @@
     flex-direction: column;
     justify-content: center;
 
-    .login_with_thirdParty {
+    .register_content {
       width: 100%;
+      flex: 3;
     }
-    .login_with_account {
-      margin-bottom: 2rem;
+    .register_account {
+      flex: 5;
     }
   }
 }
