--- a/src/css/register.scss
+++ b/src/css/register.scss
@@ -2,38 +2,32 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:wght@400;500;700&family=Young+Serif&display=swap');
 
-
-
-
-
-
-
-
 .register_wrapper {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 25rem;
+  height: 24.3rem;
   width: 50rem;
   background: $primary-color;
   border: solid 1px gray;
 
   .register_content {
     @include flex_center_column;
-    flex: 7;
-    height: 25rem;
+    flex: 3;
+    height: 24.3rem;
     font-size: 0.8rem;
-    padding: 0 0.1rem;
+    padding: 0 1rem;
     box-sizing: border-box;
     color: $primary-color;
     background-color: #13102c;
 
     .logo_and_slogan {
       @include flex_center_column;
-      margin-bottom: 2rem;
       gap: 0.5rem;
       font-weight: bold;
+
+
 
       span {
         white-space: nowrap;
@@ -52,28 +46,24 @@
       gap: 1rem;
     }
 
-    .login_sentence {
-      margin-top: 0.1rem;
-    }
   }
 
   .register_account {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex: 5;
+    flex: 2.6;
     height: 25rem;
     padding: 0 2rem;
-    margin-left: 0.9rem;
     box-sizing: border-box;
     gap:1rem;
 
     .register_title {
-      font-family: 'Young Serif', serif;
       font-size: 1.5rem;
       font-weight: bold;
-      margin-top: 1rem;
+      margin-top: 2.5rem;
       margin-bottom: 0.5rem;
+      font-family: 'Young Serif', serif;
     }
 
     .subRegister_title {
@@ -88,7 +78,6 @@
       -webkit-background-clip: text;
       background-clip: text;
     }
-
 
     .sign_up_container {
       display: flex;
@@ -116,7 +105,8 @@
       width: 100%;
       gap: 1rem;
 
-      .email_login {
+
+      .email {
         &::placeholder {
           padding-left: 1rem;
           font-weight: 600;
@@ -124,7 +114,6 @@
       }
 
       .password_field {
-        width: 100%;
         position: relative;
         display: flex;
         align-items: center;
@@ -145,12 +134,12 @@
           transform: translateY(-50%);
         }
       }
+    }
 
-      .userName {
-        &::placeholder {
-          padding-left: 1rem;
-          font-weight: 600;
-        }
+    .userName {
+      &::placeholder {
+        padding-left: 1rem;
+        font-weight: 600;
       }
     }
 
@@ -179,12 +168,11 @@
       }
     }
 
-    .login_animate {
+    .login-animate {
       display: flex;
       justify-content: center;
       align-items: center;
     }
-
   }
 
   @media (max-width: 800px) {
@@ -196,10 +184,9 @@
 
     .register_content {
       width: 100%;
-      flex: 3;
     }
     .register_account {
-      flex: 5;
+      margin-bottom: 2rem;
     }
   }
 }
