--- a/src/css/login.css
+++ b/src/css/login.css
@@ -7,6 +7,7 @@
   width: 50rem;
   background: #ffffff;
   border: solid 1px gray;
+  overflow: hidden;
 }
 .login_wrapper .login_with_thirdParty {
   display: flex;
@@ -32,6 +33,7 @@
   margin-bottom: 2rem;
 }
 .login_wrapper .login_with_thirdParty .logo_and_company span {
+  font-family: "Young Serif", serif;
   white-space: nowrap;
   font-size: 1.2rem;
 }
