--- a/src/css/register.scss
+++ b/src/css/register.scss
@@ -11,10 +11,11 @@
   width: 50rem;
   background: $primary-color;
   border: solid 1px gray;
+  overflow: hidden;
 
   .register_content {
     @include flex_center_column;
-    flex: 3;
+    flex: 4.05;
     height: 24.3rem;
     font-size: 0.8rem;
     padding: 0 1rem;
@@ -30,6 +31,7 @@
 
 
       span {
+        font-family: "Young Serif", serif;
         white-space: nowrap;
         font-size: 1.2rem;
       }
@@ -52,7 +54,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex: 2.6;
+    flex: 3;
     height: 25rem;
     padding: 0 2rem;
     box-sizing: border-box;
@@ -103,7 +105,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      gap: 1rem;
+      gap: 0.8rem;
 
 
       .email {
