--- a/src/css/navBar.scss
+++ b/src/css/navBar.scss
@@ -2,6 +2,7 @@
   width: 100%;
 
   .navbar_wrapper {
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -24,14 +25,17 @@
     }
 
     .profile{
+        max-width: 20%;
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-between;
+        justify-content: start;
+        margin-left: 1rem;
         gap: 0.5rem;
 
 
       span{
+        white-space: nowrap;
         align-self: flex-end;
         font-family: "Young Serif", serif;
         font-size: 1rem;
