--- a/src/css/verticalNavBarItem.scss
+++ b/src/css/verticalNavBarItem.scss
@@ -1,4 +1,5 @@
 .items_container {
+  max-width: 12rem;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -10,16 +11,15 @@
 
 
   &:hover{
-    background-color: #f5f5f5;
-    border-radius: 0.5rem;
+    background-color: #bebebe;
+    border-radius: 0.8rem;
     transition: 0.5s;
   }
 
 
     img{
-      width:4rem;
-      object-fit:contain;
-      vertical-align: middle;
+      width:3rem;
+      object-fit:cover;
     }
 
     span{
