adjust navbar css

--- a/src/css/generalButton.scss
+++ b/src/css/generalButton.scss
@@ -4,8 +4,9 @@
   align-items: center;
   justify-content: center;
   color:#ffffff;
-  border-radius: 1rem;
+  border-radius: 1.5rem;
   background: #3275ef;
   border: none;
   outline: none;
+  cursor:pointer;
 }
