--- a/src/css/navBar.scss
+++ b/src/css/navBar.scss
@@ -1,8 +1,11 @@
 .navbar {
+  position: relative;
   width: 100%;
+  margin-top: 0.5rem;
+  min-height: 100vh;
+
 
   .navbar_wrapper {
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -17,29 +20,39 @@
 
 
     }
-    .navigate_items{
+
+    .navigate_items {
       display: flex;
       flex-direction: column;
-      gap:2rem;
+      gap: 2rem;
 
     }
 
-    .profile{
-        max-width: 20%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: start;
-        margin-left: 1rem;
-        gap: 0.5rem;
+  }
+  .profile {
+    position: absolute;
+    max-width: 20%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    margin-left: 1rem;
+    left: 0;
+    bottom: 0;
+    gap: 0.5rem;
 
 
-      span{
-        white-space: nowrap;
-        align-self: flex-end;
-        font-family: "Young Serif", serif;
-        font-size: 1rem;
-      }
+    span {
+      white-space: nowrap;
+      align-self: flex-end;
+      font-family: "Young Serif", serif;
+      font-size: 1rem;
+    }
+  }
+
+  @media (max-width: 800px) {
+    .post_button {
+      min-width: 30%;
     }
   }
 }
