--- a/src/css/verticalNavBarItem.scss
+++ b/src/css/verticalNavBarItem.scss
@@ -11,9 +11,10 @@
 
 
   &:hover{
-    background-color: #bebebe;
+    background-color: #dadada;
     border-radius: 0.8rem;
     transition: 0.5s;
+    cursor:pointer;
   }
 
 
