--- a/src/css/login.css
+++ b/src/css/login.css
@@ -3,10 +3,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 25rem;
-  width: 50rem;
+  margin: 0 auto;
+  height: 100vh;
+  width: 80%;
   background: #ffffff;
-  border: solid 1px gray;
   overflow: hidden;
 }
 .login_wrapper .login_with_thirdParty {
@@ -56,6 +56,7 @@
   height: 25rem;
   padding: 0 1.5rem;
   box-sizing: border-box;
+  border: solid 1px gray;
 }
 .login_wrapper .login_with_account .login_title {
   font-size: 1.5rem;
