--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -6,10 +6,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 25rem;
-  width: 50rem;
+  margin: 0 auto;
+  height: 100vh;
+  width: 80%;
   background: $primary-color;
-  border: solid 1px gray;
   overflow: hidden;
 
   .login_with_thirdParty {
@@ -55,6 +55,7 @@
     height: 25rem;
     padding: 0 1.5rem;
     box-sizing: border-box;
+    border: solid 1px gray;
 
     .login_title {
       font-size: 1.5rem;
