--- a/src/css/hero.scss
+++ b/src/css/hero.scss
@@ -1,8 +1,30 @@
 .hero_container {
-  max-width: 120rem;
+  width: 45rem;
+  height: 100vh;
 
-  .hero_wrapper{
+  .hero_wrapper {
     display: flex;
+    flex-direction: column;
+    border-style: solid;
+    border-color: transparent #eff3f4 transparent #eff3f4;
+    border-width: 1px;
+    padding: 0 1rem;
+    box-sizing: border-box;
+
+  }
+
+  .home_row {
+    margin-top: 2rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+
+
+
+  .navigate_button {
+    display: flex;
+    justify-content: center;
     align-items: center;
   }
+
 }
