--- a/src/css/login.css
+++ b/src/css/login.css
@@ -136,7 +136,7 @@
   justify-content: center;
   align-items: center;
 }
-@media (max-width: 800px) {
+@media (max-width: 1100px) {
   .login_wrapper {
     width: 100%;
     height: 100%;
@@ -148,7 +148,11 @@
     width: 100%;
   }
   .login_wrapper .login_with_account {
+    width: 100%;
     margin-bottom: 2rem;
+  }
+  .login_wrapper .login_animate {
+    display: none;
   }
 }
 
