--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -153,7 +153,7 @@
     }
   }
 
-  @media (max-width: 800px) {
+  @media (max-width: 1100px) {
     width: 100%;
     height: 100%;
     display: flex;
@@ -164,7 +164,12 @@
       width: 100%;
     }
     .login_with_account {
+      width: 100%;
       margin-bottom: 2rem;
+    }
+
+    .login_animate{
+      display: none;
     }
   }
 }
