--- a/src/css/makePost.scss
+++ b/src/css/makePost.scss
@@ -33,6 +33,25 @@
       resize: none;
     }
 
+    .effect-animation {
+      position: absolute;
+      top: 0;
+      right: -30px;
+      font-size: 2em;
+      animation: moveUpFadeOut 0.5s forwards;
+    }
+
+    @keyframes moveUpFadeOut {
+      0% {
+        transform: translateY(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-30px);
+        opacity: 0;
+      }
+    }
+
     .function_buttons_container {
       display: flex;
       justify-content: space-between;
