--- a/src/css/register.scss
+++ b/src/css/register.scss
@@ -182,7 +182,7 @@
     }
   }
 
-  @media (max-width: 800px) {
+  @media (max-width: 1100px) {
     width: 100%;
     height: 100%;
     display: flex;
@@ -193,6 +193,7 @@
       width: 100%;
     }
     .register_account {
+      width: 100%;
       margin-bottom: 2rem;
     }
   }
