--- a/src/css/makePost.scss
+++ b/src/css/makePost.scss
@@ -3,6 +3,8 @@
   align-items: center;
   margin-top: 4rem;
   margin-bottom: 1rem;
+  padding: 1rem 1rem;
+    box-sizing: border-box;
   gap:1rem;
 
   img{
