--- a/src/css/navBar.scss
+++ b/src/css/navBar.scss
@@ -1,6 +1,8 @@
 .navbar {
-  position: relative;
-  max-width:20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 20%;
   margin-top: 0.5rem;
   min-height: 100vh;
 
@@ -29,8 +31,8 @@
     }
 
   }
+
   .profile {
-    position: absolute;
     height: 3rem;
     display: flex;
     flex-direction: row;
@@ -40,14 +42,14 @@
     bottom: 0;
     gap: 0.5rem;
     background: transparent;
-    border:none;
+    border: none;
     outline: none;
 
-    &:hover{
+    &:hover {
       background-color: #dadada;
       border-radius: 0.8rem;
       transition: 0.5s;
-      cursor:pointer;
+      cursor: pointer;
     }
 
 
