--- a/src/css/postLayout.scss
+++ b/src/css/postLayout.scss
@@ -1,11 +1,11 @@
 .post_container{
   width: 100%;
+  padding: 1rem 1rem;
+  box-sizing: border-box;
   overflow: hidden;
   &:hover{
     background-color: #f2f2f2;
     border-radius: 1rem;
-    padding: 1rem;
-    box-sizing: border-box;
   }
 
 
