--- a/src/css/navBar.scss
+++ b/src/css/navBar.scss
@@ -57,6 +57,11 @@
       white-space: nowrap;
       font-family: "Young Serif", serif;
       font-size: 1rem;
+
+      a{
+        text-decoration: none;
+        color: black;
+      }
     }
   }
 
