--- a/src/css/showCommentBox.scss
+++ b/src/css/showCommentBox.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 1.5rem;
+  gap: 1rem;
+  margin-top: 1rem;
 
 }
 
@@ -18,7 +19,27 @@
     align-items: center;
     gap: 1rem;
   }
-  .comment_content{
 
+}
+
+.comment_content{
+  width: 100%;
+  textarea{
+    width: 100%;
+    resize: none;
+    border: none;
+    font-size: 1rem;
+    font-family: 'arial', sans-serif;
+    font-weight: 400;
+    color: #000;
+    background-color: #fff;
+    padding: 1rem;
+    box-sizing: border-box;
+    border-radius: 0.5rem;
+    box-shadow: 0 0 0.5rem rgba(0,0,0,0.1);
+
+    &:hover{
+      box-shadow: 0 0 0.5rem rgba(0,0,0,0.2);
+    }
   }
 }
